--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -179,7 +179,7 @@
          <form id="task_actions" class="form-inline" role="form">
          <div class="row">
          <label class="col-xs-1  col-md-1" style=" text-align: center; padding-left: 23px; ">
-             <input  ng-show="accounts" title="Select Task" style=" padding-top: 4px; " type="checkbox" ng-checked="allCardsSelected" ng-click="selectAll($event)">
+             <input  ng-show="accounts" title="Select Task" style=" padding-top: 4px; " type="checkbox" ng-checked="allCardsSelected" ng-click="selectAll($event)" class="checkbox">
          </label>
          <div class="col-xs-10 col-sm-11 col-md-11 actionsbtnDiv">
                <!-- <button ng-show="accounts"  title="Reopen Task" class="btn btn-sm btn-default task_action" ng-click="reopenTask()" ng-class="{disabled: selectedCards.length==0}">
