fix a probem in oppo related to lead
Former-commit-id: a1bb9507b4395a9c4b48b404010c163d731cef86 [formerly 8cf77c6125da1949454abc9756d43b28a9016b03] [formerly 012dd03d97213bcea58a7d0469ea46a27802ea27 [formerly c748b7744c2b40f4374fc50e9310f51b60d08ef8]]
Former-commit-id: 2e3decdb0fa1af4be01b3a71a1d07fbb42c1ea3f [formerly e0d3453aa79ccbe9828fb765f6c886c563cfbd0d]
Former-commit-id: d80f46d5816f3140ba2b5a82a53387f7cb8d9d6c

--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -935,7 +935,7 @@
                             <div class="row">
                               <!-- ngRepeat: opp in opportunities -->
                             <div class="col-md-12 waterfall3 waterfallDiv" ng-hide="showNewOpp">
-                              <div  ng-repeat="opportunity in opportunities" droppable id="card_<%=$index%>"  class=" oppCard cardElement"  ng-drop="dropTag(opportunity,$index)" >
+                              <div  ng-repeat="opportunity in opportunities" droppable id="card_oppo_<%=$index%>"  class=" oppCard cardElement"  ng-drop="dropTag(opportunity,$index)" >
                                 <div class="btn-group inCardOptionsBtn">
                                   <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown">
                                    <i class="fa fa-ellipsis-vertical"></i>
