--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -67,7 +67,7 @@
                 <form ng-submit="addNewTask()" class="newTaskForm">
                     <div class="form-group">
                       <div class="input-icon right">
-                        <input taggable taggabledata="taggableOptions" ng-model="newTask.title" id="new_task_text" class="form-control"  placeholder="{{ _('Add new task ...')}}" autofocus/>
+                        <input taggable taggabledata="taggableOptions" ng-model="newTask.title" id="new_task_text" class="form-control"  placeholder="{{ _('Add new task: you can  assign it directly with @ and/or add a tag with #')}}" autofocus/>
                       </div>
                     </div>
                 </form>
