pull from iogrow
Former-commit-id: 198221721543ab770946abe1135c03813143c1be [formerly 750747ecc73f2b7b9cabc4f34841fd35a5b9c9c5] [formerly 33c90d3330537a4121e424e422a1707e707a7791 [formerly bda0100452238c386253e259d57dd6a7e32a3a99]]
Former-commit-id: 99055b49de9a6f5f8a60a9c0de2510185162cffd [formerly eb9f50cf140efd81723676a3dab4937684c3d1bb]
Former-commit-id: 097cdd1a766a71b507d2d0a29e59b27f9e4bc705

--- a/templates/base.html
+++ b/templates/base.html
@@ -102,6 +102,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 {%if user %}
     console.log('1');
     ga('create', 'UA-52188380-1', { 'userId': {{user.google_user_id}} });
+    ga(‘set’, ‘&uid’, {{USER_ID}}); // Set the user ID using signed-in user_id.
     ga('send', 'pageview');
 {% else %}
     console.log('2');
