change the link of accounts in contacts list and contact show fix #1418
Former-commit-id: 84ea2287dc29e3bbad5e89e0104ab36bf223eb5c [formerly c2f31a5518698a31024a5cffd67904e884ea3595] [formerly 3f48862495e520333c22afab9d5683b4e4651461 [formerly 79327fcc8b0879934d67e39b9c81e8068f47961c]]
Former-commit-id: 17a10be57368c4bf2200a16a0696cddbb4758a29 [formerly afafa841a7d883b82310b6d94a4173335dcaec30]
Former-commit-id: f7f2f2317020a7f33feab26f968a9b4f4057e88c

--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -293,7 +293,7 @@
                         <span ng-show="contact.account.name + contact.title" class="contact-title">
                           at
                         </span>
-                        <a  class="desc" href="/#/search/type:Contact <%=contact.account.name%>">
+                        <a  class="desc" href="/#/accounts/show/<%=contact.account.id%>">
                           #<%=contact.account.name%>
                         </a>
                       </span>
