--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -87,7 +87,7 @@
                       <span>
 
                         {{ _('Company:')}}
-                        <a class="tag ng-binding" href="/#/search/type:Contact  #<%= contact.account.name %>">
+                        <a class="tag ng-binding" href="/#/accounts/show/<%= contact.account.id %>">
 
                           #<%= contact.account.name %>
                         </a>
