adding list view to leads page
Former-commit-id: bf1a9350dec120e029799d01f02262f9064acaf8 [formerly fd2d454a5ff69c77ac5aae5747ea6c36a478dc68] [formerly 99d530524736e84263d400029b21fde99ff5a53f [formerly 9cd1ea39c95c3939d3b95bc25cd697ef6996681a]]
Former-commit-id: 9c4d7c3f55a98652f52d29274e9394147304da66 [formerly f2ff9a30cdb4a2d62091b80faa19aa6b5106b02a]
Former-commit-id: 7049529ef835239be71e7d1cfa102ee3dc043ffa

--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -146,7 +146,7 @@
                         <th>
                         </th>
                         <th>
-                         Logo 
+                         Photo
                         </th>
                         <th>                          
                             <a href="" ng-click="filterByName()"> {{ _(' Name')}}</a>
