--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -65,6 +65,12 @@
       </div>
       </div>
     </div>
+    <div class="col-md-3 col-sm-1 col-xs-3 litCardSwitcher"> 
+        <a class="pull-right" style="font-size: 16px;color: #737373;cursor: pointer;" ng-click="switchShow()"> 
+            <i class="fa fa-th-large" style="padding-top: 6px; font-size: 20px;" ng-show="show=='list'"></i>
+            <i class="fa fa-list-ul" style="padding-top: 6px; font-size: 20px; display: none;" ng-show="show=='cards'"></i>
+        </a>
+    </div>
     </div>
 </div>
 <div  class="page-content">
@@ -99,32 +105,151 @@
 
     <div class="col-md-12" ng-hide="selectedOption =='discover'">
       <div class="row subHeaderContainer">
-         <div class=" col-md-9 col-sm-9 col-xs-9 subHeaderContent">
-            <div class="row">
-                <h2 class="page-title">{{_('Leads')}} </h2>
-           </div>
-        </div>
-        <div class="col-md-3 col-sm-3 col-xs-3">
-            <div class="row">
-              <div class="pull-right">
-               <a href="/#/leads/new" class="btn red newBtn">
-                             {{_('New Lead')}}
-               </a>
-               <div class="btn-group newBtn">
-                  <button  ng-click="showImportModal()" id="sample_editable_1_new" class="btn red">
-                    <i class="fa fa-upload"></i>
-                  </button>
-               </div>
+            <div class="task-actions taskCard list-group-item task-actions">
+               <div class="row">
+               <div class="col-md-12">
+                 <form id="task_actions" class="form-inline ng-pristine ng-valid" role="form">
+                 <div class="row">
+                 <label class="col-xs-1  col-md-1" style=" text-align: center; padding-left: 23px; ">
+                     <input ng-show="leads" title="Select lead" style="padding-top: 4px;" type="checkbox" ng-checked="allCardsSelected" ng-click="selectAll($event)" class="checkbox">
+                 </label>
+                 <div class="col-xs-10 col-sm-11 col-md-11 actionsbtnDiv">
+                     <!-- <button ng-show="opportunities"  title="Reopen Task" class="btn btn-sm btn-default task_action" ng-click="reopenTask()" ng-class="{disabled: selectedCards.length==0}">
+                      <i class="fa fa-unlock"></i>
+                      <span class="btn-text">
+                        Export
+                      </span>
+                      </button>-->
+                      <button ng-show="leads" title="Add Tags" ng-click="showAssigneeTags()" class="btn btn-sm btn-default task_action disabled" ng-class="{disabled: selectedCards.length==0}">
+                      <i class="fa fa-tags"></i>
+                       <span class="btn-text">
+                         Tags
+                       </span>
+                      </button>
+                     <!-- <button title="Assign someone to Task" ng-click="assigneeModal()" class="btn btn-sm btn-default task_action disabled" ng-class="{disabled: selected_tasks.length==0}">
+                        <i class="fa fa-mail-forward"></i>
+                         <span class="btn-text">
+                        Send mail
+                         </span>
+                      </button>-->
+                      <button ng-show="leads" title="Delete leads" ng-click="editbeforedeleteselection()" class="btn btn-sm btn-default task_action  disabled" ng-class="{disabled: selectedCards.length==0}">
+                        <i class="fa fa-trash-o"></i>
+                         <span class="btn-text">
+                          Delete
+                         </span>
+                      </button>
+                      <div class="pull-right newbtnactionsbar">
+                           <a href="/#/leads/new" class="btn red newBtn" style=" margin-bottom: 0px; ">
+                                 New Lead
+                           </a>
+                           <div class="btn-group">
+                                <button ng-click="showImportModal()" id="sample_editable_1_new" class="btn red">
+                                  <i class="fa fa-upload"></i>
+                                </button>
+                           </div>
+                      </div>
+              </div>
+              
             </div>
-            </div>
-        </div>
+          </form>
+         </div>
+       </div>
+      </div>
       </div>
       <div class="row">
         <div class="col-md-12">
           <div class="row ">
           <div class="tab-pane">
           <div class="row ">
-            <div class="col-md-12 waterfall" ng-hide="blankStatelead">
+                    <div class="col-md-12" ng-show="show=='list'">
+            <div class="table-responsive showPage" ng-show="leads">
+                <table class="table contactstable">
+                <thead>
+                    <tr>
+                        <th>
+                        </th>
+                        <th>
+                        </th>
+                        <th>                          
+                            <a href="" ng-click="filterBy('firstname')"> {{ _(' Name')}}</a>
+                            <i class="fa fa-caret-up" ng-show="fltby == '-firstname'"></i>
+                            <i class="fa fa-caret-down" ng-show="fltby == 'firstname'"></i>
+                        </th>
+                        <th>                          
+                            <a href="" ng-click="filterBy('title')"> {{ _(' Title')}}</a>
+                             <i class="fa fa-caret-up" ng-show="fltby == '-title'"></i>
+                            <i class="fa fa-caret-down" ng-show="fltby == 'title'"></i>
+                        </th>
+                        <th >                          
+                            <a href="" ng-click="filterBy('company')"> {{ _(' Company name')}}</a
+                              >
+                            <i class="fa fa-caret-up" ng-show="fltby == '-company'"></i>
+                            <i class="fa fa-caret-down" ng-show="fltby == 'company'"></i>
+                        </th>
+                        <th style="min-width: 75px;">                         
+                            <a href="" ng-click="filterBy('status')"> {{ _(' Status')}}</a>
+                            <i class="fa fa-caret-up" ng-show="fltby == '-status'"></i>
+                            <i class="fa fa-caret-down" ng-show="fltby == 'status'"></i>
+                        </th>
+                        <th>                         
+                            <a href="" ng-click="filterBy('updated_at')"> {{ _(' Last update')}}</a>
+                            <i class="fa fa-caret-up" ng-show="fltby == '-updated_at'"></i>
+                            <i class="fa fa-caret-down" ng-show="fltby == 'updated_at'"></i>
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="lead in leads | orderBy:fltby:reverse" droppable ng-drop="dropTag(lead,$index)" >
+                        <td>
+                          <input title="Select all Users" type="checkbox" ng-checked="isSelectedCard(lead)" ng-click="selectCardwithCheck($event,$index,lead)" >
+                        </td>
+                        <td>
+                          <a href="/#/leads/show/<%= lead.id %>" class="startup-link" title="account.name">
+                             <img ng-hide="lead.profile_img_url" alt="<%= lead.firstname %> <%= lead.lastname %>" class="img-responsive profile-photo" src="/static/img/avatar_contact.jpg" >
+                             <img  ng-show="lead.profile_img_url" alt="<%= lead.firstname %> <%= lead.lastname %>" class="img-responsive profile-photo" src="<%=lead.profile_img_url%>">
+                          </a>
+                        </td>
+                        <td>
+                          <div class="nameContainer" style="max-width:210px">
+                            <a href="/#/leads/show/<%= lead.id %>" class="profile-link">
+                              <%= lead.firstname %> <%= lead.lastname %>
+                            </a>
+                          </div>
+                          <div class="tagsContainer">
+                             <span ng-repeat="tag in lead.tags"  draggable  ng-drag="dragTagItem(tag.edgeKey)" class="pull-left task-label task-tag badge" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %>  </span>
+                             <div class="clearfix"></div>
+                          </div>
+                        </td>
+                        <td>
+                          <a  class="desc" href="/#/search/type:Lead <%=lead.title%>">
+                            <%=lead.title%>
+                          </a>
+                        </td>
+                        <td style="word-wrap: break-word;max-width:200px">
+                          <a class="desc" href="/#/search/type:Lead <%=lead.company%>">
+                            <%=lead.company%>
+                          </a>
+                        </td>
+                        <td>
+                          <a class="desc" href="/#/search/type:Lead <%=lead.status%>">
+                            <%=lead.status %>
+                          </a>
+                        </td>
+                        <td>
+                          <%=fromNow(lead.updated_at)%>
+                        </td>
+                    </tr>                    
+                </tbody>
+                </table>
+                <div class="loaderCard" ng-show="isMoreItemLoading">
+                      <div class="loaderCardContent">
+                         <img class="img-responsive " src="/static/img/gloader.gif">
+                         <span> {{ _('Loading...')}}</span>
+                      </div>
+                </div>
+            </div>
+        </div>
+            <div class="col-md-12 waterfall" ng-hide="blankStatelead" ng-show="show=='cards'">
               <div class="labelsCardElement cardElement" data-span="all" ng-show="showTagsFilter">
                     <button type="button" class="close"  aria-hidden="true" ng-click="hideTagFilterCard()"></button>
                     <ul class="list-group tags-list">
@@ -189,6 +314,7 @@
                 <div class="detailsSection">
                   <div class="head">
                     <div class="pic">
+                      <input  class="checkboxOnSmallScreen" title="Select Contact" style="padding-top: 4px;position: absolute;left: 5px;" type="checkbox" ng-checked="isSelectedCard(lead)" ng-click="selectCardwithCheck($event,$index,lead)" >
                       <a href="/#/leads/show/<%= lead.id %>" class="startup-link" title="account.name">
                       <img ng-hide="lead.profile_img_url" alt="<%= lead.firstname %> <%= lead.lastname %>" class="img-responsive profile-photo" src="/static/img/avatar_contact.jpg" >
                       <img  ng-show="lead.profile_img_url" alt="<%= lead.firstname %> <%= lead.lastname %>" class="img-responsive profile-photo" src="<%=lead.profile_img_url%>">
@@ -570,7 +696,7 @@
   </div>
   </div>
 </div>
-<div id="BeforedeleteLead" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" 
+<div id="BeforedeleteSelectedLeads" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" 
               aria-hidden="true">
           <div class="modal-dialog">
             <div class="modal-content">
@@ -580,12 +706,13 @@
               </div>
               <div class="modal-body">
                  <form id="seletesho" name="deletesho" class="form-horizontal">
-                  <p>{{_("Are you sure you want to delete")}} :  <%= selectedLead.firstname %> <%= selectedLead.lastname %> .</p>
+                  <p ng-show="selectedCards.length > 1">{{_("Are you sure you want to delete")}} :<%=selectedCards.length %> leads .</p>
+                  <p ng-show="selectedCards.length==1">{{_("Are you sure you want to delete")}} :  <%=selectedCards[0].firstname %> <%=selectedCards[0].lastname %> .</p>
               </div>
               <div class="modal-footer">
                 <button class="btn" ng-click="selectedLead={}" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
 
-                <input ng-click="deletelead()" type="submit" class="btn red" value="{{_('Delete this Lead')}}">
+                <input ng-click="deleteSelection()" type="submit" class="btn red" value="{{_('Delete this Lead')}}">
                 <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
               </div>
                </form>
@@ -593,7 +720,7 @@
           </div>
        </div>
       <!--assign tags model-->
-   <div id="assigneeTagsToTask" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+   <div id="assigneeTagsToLeads" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
           <div class="modal-dialog">
             <div class="modal-content">
             <div class="modal-header">
@@ -613,7 +740,7 @@
             </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                <input ng-hide="isLoadingTask" ng-click="addTagsTothis()" type="submit" class="btn green" value="{{_('Add')}}">
+                <input ng-hide="isLoadingTask" ng-click="addTagstoLeads()" type="submit" class="btn green" value="{{_('Add')}}">
                 <input ng-show="isLoadingTask" type="submit" class="btn green" value="Loading..." disabled>
               </div>
           </form>
