--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -709,7 +709,7 @@
           <div class="modal-dialog">
             <div class="modal-content">
             <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="clearTagsModel('select2_sample2')">×</button>
               <h3 id="myModalLabel" class="modal-title">Add Tags </h3>
             </div>
             <div class="modal-body">
@@ -724,7 +724,7 @@
                 </div>
             </div>
               <div class="modal-footer">
-                <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
+                   <button class="btn" data-dismiss="modal" aria-hidden="true" ng-click="clearTagsModel('select2_sample2')">{{_("Cancel")}}</button>
                 <input ng-hide="isLoadingTask" ng-click="addTagstoOpportunities()" type="submit" class="btn green" value="Add">
                 <input ng-show="isLoadingTask" type="submit" class="btn green" value="Loading..." disabled>
               </div>
