--- a/templates/base.html
+++ b/templates/base.html
@@ -109,8 +109,18 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 {% endif %}
 
 </script>
+
+
+
+
+    <link rel="stylesheet" href="/static/hopscotch/css/hopscotch.css"></link>
+
+
+
 </head>
 <body class="page-header-fixed gray-body">
+
+
   <!-- BEGIN HEADER -->
   <div class="header navbar navbar-default navbar-fixed-top ">
     <!-- BEGIN TOP NAVIGATION BAR -->
@@ -411,6 +421,9 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 <div class="page-container">
 
   <!-- BEGIN SIDEBAR -->
+  
+
+
   <div class="page-sidebar-wrapper">
     <div class="page-sidebar navbar-collapse collapse">
         <!-- BEGIN SIDEBAR MENU -->
@@ -458,6 +471,9 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 <!-- END FOOTER -->
 <!-- BEGIN JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
 <!-- BEGIN CORE PLUGINS -->
+ <script src="/static/hopscotch/js/hopscotch.js" ></script>
+<script src="/static/hopscotch/js/tour.js" ></script>
+
   <script src="/static/plugins/jquery.min.js"  type="text/javascript"></script>
   <script src="/static/bootstrap3/plugins/jquery-ui/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
   <script src="/static/bootstrap3/plugins/moment/moment.min.js"></script>
@@ -633,6 +649,14 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 </script>
 
 <script src="https://checkout.stripe.com/checkout.js"></script>
+
+
+
+
+
+
+
+
 
 
 
