--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -29,9 +29,8 @@
       padding-right: 50px;
     }
     </style>
-    <!-- Google Analytics -->
-<script>
-<!-- KISSmetrics tracking snippet -->
+
+    <!-- KISSmetrics tracking snippet -->
 <script type="text/javascript">var _kmq = _kmq || [];
 var _kmk = _kmk || '6c129bfa2e765debb22e41c9e3646c128a75148d';
 function _kms(u){
@@ -44,6 +43,9 @@ function _kms(u){
 }
 _kms('//i.kissmetrics.com/i.js');
 _kms('//doug1izaerwt3.cloudfront.net/' + _kmk + '.1.js');
+</script>
+    <!-- Google Analytics -->
+<script>
 
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
