display owner last update on card at right
Former-commit-id: be606bba108a2aa54c946730745ce25a56d202b6 [formerly 5905d9d76958d683d2fe72d0c5f5b8806fdf793f] [formerly 06a6266eede9ac53be200f26b77732930e241864 [formerly 84c0a3d03766e2b957440799c4266ace88f40bcb]]
Former-commit-id: 0c2e3d607f24e7d033679810c327910d1495e0cb [formerly 20d0134c371c91d87a415e2a16a59e882d44eef1]
Former-commit-id: 5a87e94c1288c319cfad530808fda92f33e325fb

--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -93,17 +93,6 @@
                         </a>
                       </span>
                     </li>
-                    <li class="hangout-item">                        
-                      <span>
-                         {{ _('Owner:')}}
-                        <a class="tag ng-binding" href="/#/search/type:Contact owner:<%= contact.owner.google_user_id %>">
-                          #<%= contact.owner.google_display_name %>
-                        </a>
-                      </span>
-                    </li>
-                    <li>
-                      <span class="contact-title" >{{ _('Last updated:')}}  <%=fromNow(contact.updated_at)%> </span>
-                    </li>
                     <li>
                         <br>
                         <div id="placeholder-div1" class="pull-right hangout-btn"></div>
@@ -1526,6 +1515,28 @@
     <!-- tasks cards -->
     <!-- tasks cards -->
 <div class="col-md-3 tasks-col">
+  <div class="row">
+                <div class="col-md-12">
+                     <div class="portlet showPage rightCardContent">
+                          <div class="col-md-12">
+                                    <ul class="list-unstyled contactInfos">
+                                        <li class="hangout-item">                        
+                                        <span>
+                                           {{ _('Owner:')}}
+                                          <a class="tag ng-binding" href="/#/search/type:Contact owner:<%= contact.owner.google_user_id %>">
+                                            #<%= contact.owner.google_display_name %>
+                                          </a>
+                                        </span>
+                                      </li>
+                                      <li>
+                                        <span class="contact-title" >{{ _('Last updated:')}}  <%=fromNow(contact.updated_at)%> </span>
+                                      </li>
+                                    </ul>
+                                </div>  
+                        <div class="clearfix"></div>
+                      </div>
+                </div>
+            </div>
   <div class="row">
     <div class="col-md-12">
          <div class="portlet showPage rightCardContent">
