--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -1520,7 +1520,7 @@
                      <div class="portlet showPage rightCardContent">
                           <div class="col-md-12">
                                     <ul class="list-unstyled contactInfos">
-                                        <li class="hangout-item">                        
+                                        <li class="">                        
                                         <span>
                                            {{ _('Owner:')}}
                                           <a class="tag ng-binding" href="/#/search/type:Contact owner:<%= contact.owner.google_user_id %>">
