Display delete Contact on modal when deleting Contact
Former-commit-id: 239975714095d23125001d65fd073043c1c0fed9 [formerly 877915e6ca3444400e2276031539458881469849] [formerly 8546037c058a60cf4ac7d4c3adfeeb9083f6fe42 [formerly 8eccbcde7bd763a6d3431ac6813f68e669983659]]
Former-commit-id: ba8abcb83b6162d1a1fbab6786503b1089413e67 [formerly daa8e5baf552a06efaf3fd16d0418823b076758a]
Former-commit-id: 9783113d4a10cf9e1c189c84d39b29d7d57b61e8

--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -535,7 +535,7 @@
               <div class="modal-footer">
                   <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
 
-                  <input  ng-click="deleteSelection()" type="submit" class="btn red" value="Delete this Account">
+                  <input  ng-click="deleteSelection()" type="submit" class="btn red" value="Delete this Contact">
                   <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
               </div>
               </form>
