[Account Show] - Upload photo not working on contact related Tab fix#1452 [Contact Show bug]- when deleting Opportunity, don't display all opportunity fix#1447
Former-commit-id: c76d18c75bd71319766993a58b5f678c29abff18 [formerly a02c42d999a00a48042f26ac4fe4b30ab8a1da93] [formerly 71a623070f6a0e5b2d73a9310fd0d29c127cbfe4 [formerly 1be94c92486b1c3265dba77e20af698d57def012]]
Former-commit-id: 4600abc0583524fffe9123d3be2b41a3d8918e47 [formerly 332303adab6df58ec309ceef9d82521c35fa220b]
Former-commit-id: 0697943bdb7431a563f18d669f69774307a4031d

--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -869,7 +869,7 @@
                            <i class='fa fa-tags'></i> {{_('Add tags')}} </a>
                       </li>
                                     <li>
-                       <a href="" ng-click="editbeforedeleteopp(opportunity)">
+                       <a href="" ng-click="editbeforedeleteopp($index)">
                            <i class='fa fa-trash-o'></i> {{_('Delete')}} </a>
                       </li>
                                   </ul>
