--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -449,13 +449,13 @@
                                                                 <div class="col-md-3">
                                                                     <div class="portlet">
                                                                         <div class="portlet-body left-sidebar" id="chats">
-                                                                            <div class="pic">
-                                                                                <img alt="<%=contact.firstname%> <%=contact.lastname%>" ng-src="<%=imageSrc%>" class="img-responsive profile-photo-large">
-                                                                                <a ng-click="createPickerUploader()" href="" class="btn-upload btn-upload-contact" data-toggle="modal">
-                                                                                    <img src="/static/img/upload_logo.png" class="" >
-                                                                                </a>
-                                                                                <div  class="responsivePhotoIcon"></div>
-                                                                            </div>
+                                                                              <div class="pic">
+                                                <img alt="<%=contact.firstname%> <%=contact.lastname%>" ng-src="<%=imageSrcContact%>" class="img-responsive profile-photo-large">
+                                                <a ng-click="createPickerUploaderContact()" href="" class="btn-upload btn-upload-contact" data-toggle="modal">
+                                                    <img src="/static/img/upload_logo.png" class="" >
+                                                </a>
+                                                <div  class="responsivePhotoIcon"></div>
+                                            </div>
                                                                         </div>
                                                                     </div>
                                                                 </div>
@@ -755,7 +755,7 @@
                                                                 <div class="pic">
                                                                     <a href="/#/contacts/show/<%= contact.id %>" class="startup-link" title="<%=contact.firstname%> <%=contact.lastname%>">
                                                                         <img ng-hide="contact.profile_img_url"  class="img-responsive profile-photo" src="/static/img/avatar_contact.jpg" >
-                                                                        <img ng-show="contact.profile_img_url"  class="img-responsive profile-photo" ng-src="https://docs.google.com/uc?id=<%= contact.profile_img_id %>" data-hasqtip="2">
+                                                                        <img ng-show="contact.profile_img_url"  class="img-responsive profile-photo" ng-src="https://docs.google.com/uc?id=<%=contact.profile_img_id %>" data-hasqtip="2">
                                                                     </a>
                                                                 </div>
                                                                 <div class="text">
