stop the suspended users from using iogrow v1
Former-commit-id: 4990e11cde6c035f2b80179bc4d173b48054f111 [formerly a066037a87b1aa246fe0af99884b3c0ff63c3007] [formerly fbe5bc3b3b14eb2e6bde4d0d91d1c1d7045954b7 [formerly 1edf372e2c7d40d73a902a9af5b3f4e5c91d9c3a]]
Former-commit-id: c3de4edc35d939bb1148f31d5a2959f43df6e8a6 [formerly 204879a9f4ae8f2872039096ba162ba5a0dff05e]
Former-commit-id: 90bb97916e625fe90682b9e6428a41e931ed2c91

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -88,7 +88,7 @@
 	  	<div class="portlet">
 	  		<div class="portlet-title" style="margin-bottom:0px">
 	  			<div class="caption">
-	  				Leads by stage
+	  				Leads by status
 	  			</div>
 	  		</div>
 	  		<div class="portlet-body"  style="padding:15px;">
