--- a/templates/base.html
+++ b/templates/base.html
@@ -62,9 +62,11 @@
   <link href="/static/bootstrap3/css/test.css" rel="stylesheet" type="text/css"/>
 
 
+<link rel="stylesheet" type="text/css" href="/static/plugins/sweetalert/lib/sweet-alert.css">
 
   <!-- END THEME STYLES -->
 
+<script src="/static/plugins/sweetalert/lib/sweet-alert.js"></script>
   <!-- **********************the stripe code******************************* -->
 <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 
@@ -140,6 +142,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         <!-- BEGIN TOP NAVIGATION MENU -->
 
       <input type="hidden" id="license_is_expired" value="{{license_is_expired}}" />
+      <input type="hidden" id="user_suspended" value="{{user_suspended}}" />
 
         <ul class="nav navbar-nav pull-right">
 
