--- a/templates/admin/users/user_list.html
+++ b/templates/admin/users/user_list.html
@@ -145,7 +145,8 @@
 
                 <tr ng-repeat="user in users  | orderBy:predicate:reverse" >
                   <td>
-                     <input type="checkbox" ng-click="select_user(user,$index,$event)" ng-checked="isSelected()">
+                     <input type="checkbox" ng-click="select_user(user,$index,$event)" ng-checked="isSelected()" ng-hide="user.is_super_admin">
+
                   </td>
                   <td>
                     <%= user.google_display_name %> 
@@ -159,7 +160,7 @@
                   {% if is_admin %} 
                   <td  style="padding-left: 44px;" >
                     <input title='{{ _("Select all Users")}}' type="checkbox" ng-checked="user.is_admin" ng-click="setAdmin(user,$index,$event)"   ng-hide="user.is_super_admin">
-
+                   <p ng-show="user.is_super_admin"> super admin </p>
                   </td>
                   {% endif %}
                 </tr>                
